Add logo mark below quote

--- a/index.html
+++ b/index.html
@@ -41,6 +41,14 @@
     font-weight: 500;
     letter-spacing: 0.02em;
   }
+
+  .logo {
+    display: block;
+    margin: 56px auto 0;
+    width: clamp(60px, 10vw, 90px);
+    height: auto;
+    opacity: 0.85;
+  }
 </style>
 </head>
 <body>
@@ -49,6 +57,7 @@
     &ldquo;A good educational system should have three purposes: it should provide all who want to learn with access to available resources at any time in their lives; empower all who want to share what they know to find those who want to learn it from them; furnish all who want to present an issue to the public with the opportunity to make their challenge known.&rdquo;
     <cite>Ivan Illich, Deschooling Society, 1971</cite>
   </blockquote>
+  <img src="logo.png" alt="Opus School" class="logo">
 </main>
 </body>
 </html>
