Move logo above quote — letterhead style

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
   .logo {
     display: block;
-    margin: 56px auto 0;
+    margin: 0 auto 48px;
     width: clamp(120px, 22vw, 200px);
     height: auto;
     opacity: 0.85;
@@ -53,11 +53,11 @@
 </head>
 <body>
 <main>
+  <img src="logo.png" alt="Opus School" class="logo">
   <blockquote>
     &ldquo;A good educational system should have three purposes: it should provide all who want to learn with access to available resources at any time in their lives; empower all who want to share what they know to find those who want to learn it from them; furnish all who want to present an issue to the public with the opportunity to make their challenge known.&rdquo;
     <cite>Ivan Illich, Deschooling Society, 1971</cite>
   </blockquote>
-  <img src="logo.png" alt="Opus School" class="logo">
 </main>
 </body>
 </html>
