Tighten top spacing, transparent logo bg

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     color: #000;
     min-height: 100vh;
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: center;
-    padding: 48px 24px;
+    padding: 60px 24px 48px;
   }
 
   main {
